tests/type_errors/map_non_function_arg.nos
# expect_error: expected function
# Passing a non-function value where a function is expected
main() = [1,2,3].map(42)
